lots of restructuring and cleanup ... embed web pages, etc.
@Jimbilben @WillemSleegers

I cleaned and organized this quite a bit. Willem, it might make sense for you to 'take over' the 'survey design' and 'factor analysis' sections

(not that you have to 'do' anything ... but if you are doing and writing stuff anyways, it might as well be there, I guess)

Note esp some work in the 'presentation, labeling, and vis' section. Not saying 'my way is right' ... just trying to get the ball rolling on a consensus/protocol/template on this stuff, to save us time and brainpower later

--- a/causal_inf.Rmd
+++ b/causal_inf.Rmd
@@ -1,1 +1,21 @@
-# CAUSAL INFERENCE {-#causal} 
+# **(CAUSAL INFERENCE)** {-#causal}
+
+
+Some stuff to integrate from [here](https://daaronr.github.io/metrics_discussion/caus-inf-obs.html#caus_inf_obs) perhaps.
+
+
+## Useful resources: {-}
+
+[Causal Inference: What If. R and Stata code for Exercises](https://remlapmot.github.io/cibookex-r/)
+
+[The effect](https://www.theeffectbook.net/) -- bookdown, looks great, love nick HK
+
+[Causal inference: the Mixtape](https://www.scunning.com/mixtape.html)
+
+[Useful R Packages for Causal Inference in the Social Sciences](https://www.dhidalgo.me/post/useful-r-packages-for-causal-inference-in-the-social-sciences/)
+
+[Applied causal analysis with R](https://bookdown.org/paul/applied-causal-analysis/)
+
+Mostly Harmless Econometrics (R code -- where was it?)
+
+
