--- a/introduction_overview.Rmd
+++ b/introduction_overview.Rmd
@@ -1,4 +1,4 @@
-# Introduction and overview
+# **Introduction and overview**
 
 **NOTE: this is now publicly hosted but not indexed. Please be careful not to share any confidential data or sensitive information.**
 
@@ -6,36 +6,36 @@
 
 ## The purpose of this resource
 
-<!-- (integrate discussion from Slack thread and readme) --> 
+<!-- (integrate discussion from Slack thread and readme) -->
 
 A github-hosted 'bookdown' for structured in-depth discussion
 
 \
 
+```{block2,  type='note'}
+
 *David Reinstein's conception:*
 
 - Don't share any confidential data or sensitive information
 
-\
-
 - Don't feel compelled to flesh out all sections with original content. Don’t add content just because "it’s in a typical syllabus’.
 
-- Focus on things that we use, have used, want to use, or have been requested to address. 
+- Focus on things that we use, have used, want to use, or have been requested to address.
      - Secondarily, on things relevant to Effective Altruism-related research in general
 - Do curate link, and embed resources from elsewhere
 
 - Incorporate examples from our work (where these are not sensitive or they where can be made anonymous)
 
-\
 
 - Do put in content that is more in-depth and technical, or involving R-code and tools
-- Still, do try to 'offset' details (in folding blocks, appendix sections, margin notes), where it would otherwise clutter the book
+    - Still, do try to 'offset' details (in folding blocks, appendix sections, margin notes), where it would otherwise clutter the book
 - Start with 'plain language' explanations of technical content; for ourselves, and potentially to share with partners in future
 
-\
 
 I also hope to use this to develop 'templates and standard practices' for our work.
 
+
+```
 
 \
 
@@ -43,17 +43,17 @@ I also hope to use this to develop 'templates and standard practices' for our wo
 
 ```{block2,  type='fold'}
 
-In ‘building a knowledge base’, there are some things that are important to include, but others should be excluded.  If we are compulsive and auto-nerd-sniped to go down every rabbit hole it will be wasteful. But some rabbit holes will be worth going down, at least partially. 
+In ‘building a knowledge base’, there are some things that are important to include, but others should be excluded.  If we are compulsive and auto-nerd-sniped to go down every rabbit hole it will be wasteful. But some rabbit holes will be worth going down, at least partially.
 
 *What’s a good rule-of-thumb for knowing if it’s worth a dive?* Maybe the 'second time rule'?
-  
+
 Mark the issue the first time it comes up, perhaps leave a placeholder and a link to the original notes or discussion.
 
 Then the second time an issue comes up it may be safe to assume its an ‘important issue to dive into and document’?
 
 ```
 
- 
+
 Below, 'a partial dive into the rabbit hole', for one possible framework.
 
 ```{block2,  type='note'}
@@ -63,7 +63,7 @@ What do I mean by a 'partial dive into the rabbit hole?'
 
 - Explain how it applied to our problem (generically if there is a confidentiality issue)
 
-- Curated links [PeteW-gists](https://gist.github.com/peterhurford/)-eqsue, 
+- Curated links [PeteW-gists](https://gist.github.com/peterhurford/)-eqsue,
 
 - characterize in our own words (but concisely)
 
@@ -71,12 +71,12 @@ What do I mean by a 'partial dive into the rabbit hole?'
 
 - check our understanding through communication and discussion with others, flag key issues
 
-```  
+```
 
 
 
 ## Sections and organization {#outline_sections}
-(Proposed/discussedbelow -- keep updated with actual structure)
+(Proposed/discussed below -- keep updated with actual structure)
 
 **[DATA, CODE](#data)** \*
 
@@ -89,7 +89,7 @@ What do I mean by a 'partial dive into the rabbit hole?'
 
 (Languages, clean code, reproducability, etc.)
 
-**Data practices** 
+**Data practices**
 
 (Storing, labeling, etc)
 
@@ -100,7 +100,7 @@ What do I mean by a 'partial dive into the rabbit hole?'
 - Formatting: tables, figures, and numerical content**
 
 - Visualizations: suggested/preferred formats and templates
-     
+
 
 **SURVEY DESIGNS AND METHODS**
 
@@ -164,4 +164,9 @@ What do I mean by a 'partial dive into the rabbit hole?'
 - Causal and Guesstimate
 - Code-based tools
 
-}
+## Favorite resources, references, tools
+
+["Research tools" Reinstein airtable, data relevant view](https://airtable.com/shrIWaF4UsQ92CavA)
+
+[Pete W's gists](https://gist.github.com/peterhurford/)
+
