--- a/packages.bib
+++ b/packages.bib
@@ -15,6 +15,14 @@
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
+@Manual{R-devtools,
+  title = {devtools: Tools to Make Developing R Packages Easier},
+  author = {Hadley Wickham and Jim Hester and Winston Chang},
+  year = {2021},
+  note = {R package version 2.4.2},
+  url = {https://CRAN.R-project.org/package=devtools},
+}
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
@@ -29,6 +37,22 @@
   year = {2021},
   note = {R package version 0.5.1},
   url = {https://CRAN.R-project.org/package=forcats},
+}
+
+@Manual{R-furrr,
+  title = {furrr: Apply Mapping Functions in Parallel using Futures},
+  author = {Davis Vaughan and Matt Dancho},
+  year = {2021},
+  note = {R package version 0.2.3},
+  url = {https://github.com/DavisVaughan/furrr},
+}
+
+@Manual{R-future,
+  title = {future: Unified Parallel and Distributed Processing in R for Everyone},
+  author = {Henrik Bengtsson},
+  year = {2021},
+  note = {R package version 1.23.0},
+  url = {https://CRAN.R-project.org/package=future},
 }
 
 @Manual{R-ggplot2,
@@ -119,6 +143,14 @@
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
+@Manual{R-usethis,
+  title = {usethis: Automate Package and Project Setup},
+  author = {Hadley Wickham and Jennifer Bryan and Malcolm Barrett},
+  year = {2021},
+  note = {R package version 2.1.3},
+  url = {https://CRAN.R-project.org/package=usethis},
+}
+
 @Book{bookdown2016,
   title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
   author = {Yihui Xie},
@@ -127,6 +159,14 @@
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
+}
+
+@Misc{future2021,
+  author = {Henrik Bengtsson},
+  title = {A Unifying Framework for Parallel and Distributed Processing in R using Futures},
+  year = {2021},
+  note = {10.32614/RJ-2021-048},
+  url = {https://journal.r-project.org/archive/2021/RJ-2021-048/index.html},
 }
 
 @Book{ggplot22016,
