--- a/introduction_overview.Rmd
+++ b/introduction_overview.Rmd
@@ -1,6 +1,8 @@
 # **Introduction and overview**
 
-**NOTE: this is now publicly hosted but not indexed. Please be careful not to share any confidential data or sensitive information.**
+*This is public!*^[NOTE: this is now publicly hosted but not indexed. Please be careful not to share any confidential data or sensitive information.]
+
+*Some sections shared shared with the [EA Marketing Team Gitbook](https://effective-giving-marketing.gitbook.io/untitled/)*
 
 ## Rethink Priorities: Our approach to empirical and quantitative work
 
@@ -12,36 +14,40 @@ A github-hosted 'bookdown' for structured in-depth discussion
 
 \
 
-::: {.alert .alert-secondary}
+
  
 
-*David Reinstein's conception:*
+*Reinstein's conception: what (not) to put in, and how :*
 
-- Don't share any confidential data or sensitive information
+::: {.foldable} 
 
-- Don't feel compelled to flesh out all sections with original content. Don’t add content just because "it’s in a typical syllabus’.
+Don't share any confidential data or sensitive information
 
-- Focus on things that we use, have used, want to use, or have been requested to address.
-     - Secondarily, on things relevant to Effective Altruism-related research in general
-- Do curate link, and embed resources from elsewhere
+Don't feel compelled to flesh out all sections with original content. Don’t add content just because "it’s in a typical syllabus’.
 
-- Incorporate examples from our work (where these are not sensitive or they where can be made anonymous)
+Focus on things that we use, have used, want to use, or have been requested to address.
 
-
-- Do put in content that is more in-depth and technical, or involving R-code and tools
-    - Still, do try to 'offset' details (in folding blocks, appendix sections, margin notes), where it would otherwise clutter the book
-- Start with 'plain language' explanations of technical content; for ourselves, and potentially to share with partners in future
+- Secondarily, on things relevant to Effective Altruism-related research in general
 
 
-I also hope to use this to develop 'templates and standard practices' for our work.
+Do curate-link, and embed resources from elsewhere
+
+Incorporate examples from our work (where these are not sensitive or they where can be made anonymous)
 
 
+Do put in content that is more in-depth and technical, or involving R-code and tools
+
+- Still,  try to 'offset' details (in folding blocks, appendix sections, margin notes), where it would otherwise clutter the book
+
+Start with 'plain language' explanations of technical content; for ourselves, and potentially to share with partners in future
+
+I also hope to use this to develop 'templates and standard practices' for our work (although these may be moved to separate bookdowns).
  
 :::
 
 \
 
-**What to include and when to dive into the rabbit hole?** (Unfold: the 'second time it comes up' rule)
+*When to dive into the rabbit hole?... the 'second time it comes up' rule:*
 
 ::: {.foldable} 
  
@@ -54,15 +60,14 @@ Mark the issue the first time it comes up, perhaps leave a placeholder and a lin
 
 Then the second time an issue comes up it may be safe to assume its an ‘important issue to dive into and document’?
 
- 
 :::
 
 
-Below, 'a partial dive into the rabbit hole', for one possible framework.
+\
 
-::: {.alert .alert-secondary}
- 
+*A 'partial dive into the rabbit hole', for one possible framework.*
 
+::: {.foldable} 
 
 What do I mean by a 'partial dive into the rabbit hole?'
 
@@ -81,8 +86,7 @@ What do I mean by a 'partial dive into the rabbit hole?'
 
 
 
-## Sections and organization {#outline_sections}
-(Proposed/discussed below -- keep updated with actual structure)
+## Sections and organization {#outline_sections}^[Proposed/discussed below -- keep updated with actual structure]
 
 **[DATA, CODE](#data)** ^[ Note that the capital letters denote the highest-level sections, but in the markdown these are at the same level as the sections below
 ]
@@ -98,48 +102,45 @@ What do I mean by a 'partial dive into the rabbit hole?'
 **[PRESENTING AND DESCRIBING DATA](#present)**
 
 - Methods of 'describing data'
-
 - Formatting: tables, figures, and numerical content**
-
 - Visualizations: suggested/preferred formats and templates
 
+\
 
 **SURVEY DESIGNS AND METHODS**
 
 - How to ask good survey questions
-
 - Avoiding pitfalls
-
 - Sampling issues and representativeness
-
 - Constructing reliable indices and scales
-
 - Implementation platforms and issues
 
 - Survey design tools (IT)
 
-**EXPERIMENTS AND TRIALS*
+\
+
+**EXPERIMENTS AND TRIALS**
 
 - [Experiment and trial design: qualitative issues and guidelines](#expt-qual-imp)
-
 - [Experiment and trial design: quantitative issues](#expt-quant)
-
 - 'Treatment' assignment (blocking, randomization, etc)
 - Adaptive, sequential and dynamic designs
 - Planning, diagnosing and adjusting a design
 - Power analyses (and other 'diagnosands')
 
+\
+
 
 **BASIC STATISTICS: MODELING, TESTING AND INFERENCE**
 
 - Bayesian, frequentist, and other approaches
-
 - A 'statistical model'^[ I put in the first discussion of 'models' here because, at least in one perspective, all of the below is based on models.
 ]
-
 - Bayesian updating and inference
 - Hypothesis testing
 - Preferred approaches ('which tests') etc.
+
+\
 
 **[MODELING, PREDICTION, INFERENCE, AND MACHINE LEARNING](#modeling)**
 
@@ -149,6 +150,8 @@ What do I mean by a 'partial dive into the rabbit hole?'
 - Practical Bayesian approaches and interpretations
 - Psychometrics, especially factor analysis
 
+\
+
 **[CAUSAL INFERENCE](#causal)**
 
 - Basic ideas and frameworks (simple, potential outcomes, DAGs)
@@ -156,6 +159,8 @@ What do I mean by a 'partial dive into the rabbit hole?'
 - The experimental ideal
 - Non-experimental approaches to causal inference
 - Dealing with attrition
+
+\
 
 **[MONTE-CARLO 'FERMI ESTIMATION' APPROACHES](#fermi);**
 
@@ -175,7 +180,7 @@ For more information on how this 'bookdown' was created, see our public template
 
 ## R setup and packages
 
-We are using `Renv` to keep packages aligned. Please install Renv it and snapshot 
+We are using `Renv` to keep packages aligned. Please install Renv and snapshot as you add/adjust packages 
 
 `renv::dependencies` should tell us what packages are used/needed
 
@@ -186,6 +191,4 @@ dependencies[2] %>% unique() %>% as.list()
 ```
 
 
-
-
-## Git repo, shared files, procedure for editing
+## (To explain: Git repo, shared files, procedure for editing)
