--- a/survey_designs_methods.Rmd
+++ b/survey_designs_methods.Rmd
@@ -10,23 +10,23 @@ More technical and involved discussion of overlapping content will often be defe
 
 
 ::: {.alert .alert-secondary}
- 
+
 
 Link or incorporate William Elsey's work [HERE](https://willemsleegers.github.io/how-to-science/survey-design.html#item-development),
 
 and [Reinstein's sloppy notes](https://daaronr.github.io/metrics_discussion/surveys.html); see embeds below
 
- 
+
 :::
 
 
 ## (Willem Sleegers, to incorporate)
 
-[item development](https://willemsleegers.github.io/how-to-science/survey-design.html#item-development)
+[item development](https://willemsleegers.github.io/how-to-science/chapters/surveys/item-development.html)
 
 ```{r wppage}
 
-knitr::include_url("https://willemsleegers.github.io/how-to-science/survey-design.html#item-development")
+knitr::include_url("https://willemsleegers.github.io/how-to-science/chapters/surveys/item-development.html")
 
 ```
 
@@ -54,5 +54,16 @@ knitr::include_url("https://daaronr.github.io/metrics_discussion/surveys.html")
 - Implementation platforms and issues
 
 - Survey design tools (IT)
+
+
+
+# [From Sample to Population: Multilevel Regression and Poststratification (MRP) and Survey Weighting](https://docs.google.com/document/d/14uTZqOpnKAK8_oRwgqlAhEXfyQPQUKK9/edit
+
+
+```{r wppage}
+
+knitr::include_url("https://docs.google.com/document/d/14uTZqOpnKAK8_oRwgqlAhEXfyQPQUKK9/edit")
+
+```
 
 
